<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="action_settings">Settings</string><string name="app_name">虎啸影视</string>
    <string name="hello_world">Hello world!</string>
    <!-- film -->
    <string name="releasing">正在上映</string>
    <string name="upcoming">即将上映</string>
    <string name="buy_ticket">购票</string>
    <string name="cinema">影院</string>
    <string name="city">城市</string>
    <string name="community">社区</string>
    <string name="popular_post">热门帖子</string>
    <string name="recommend_community">推荐社区</string>
    <string name="edit_search_community">找社区</string>
    <string name="search">搜索</string>
    <string name="a">啊啊啊啊啊啊</string>
    <string name="mine">我的</string>
    
    <!-- cinema -->
	<string name="all">全部</string>
	<string name="select_seat">选座</string>
	<string name="group_purchase">团购</string>
	<string name="seat">座</string>
	<string name="tuan">团</string>
	<string name="preferential">新用户专享</string>
	<string name="imax_hall">iMax厅</string>
	<string name="select_seat_buy_ticket">选座购票</string>
	<string name="serverurl">http://127.0.0.1/E:/android_demo/movie/src/</string>
	
	<string name="iwant">我想看的</string>
	<string name="iscore">我评分的</string>
	<string name="myfilm">我的电影</string>
	
	<string name="demo_title_poi">POI搜索功能--POISearchDemo</string>
    <string name="demo_desc_poi">介绍关键词查询、suggestion查询和查看餐饮类Place详情页功能</string>
    <string name="ticket_wait_payment">待付款</string>
    <string name="my_cinema_ticket">我的订单</string>
    <string name="ticket_not_spending">未消费</string>
    <string name="ticket_done">已完成</string>
    <string name="ticket_edit">编辑</string>
    <!-- order -->
    <string name="submit_order">提交订单</string>
    <string name="pay_order">支付订单</string>
    <string name="confirm_pay">确认支付</string>
    <string name="ticket_phone_text">购票手机号</string>
    
    <!-- autolistview -->
    <!-- 自定义组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>

    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>
    
    <!-- 注册 -->
    <string name="register_tv">注册</string>
    <!-- 我的账户 -->
    <string name="my_account">我的账户</string>
    <string name="modify_username">修改用户名</string>
    <string name="modify_password">修改密码</string>
    <string name="bind_phone_number">绑定手机号</string>
    <!-- 找回密码 -->
    <string name="find_password">找回密码</string>
</resources>
