<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cinema_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/cinema_title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="#E02826">

        <RelativeLayout
            android:id="@+id/cinema_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp" >

            <TextView
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/city"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/head_down"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/city_name"
                android:src="@drawable/arrow_expand" />
        </RelativeLayout>

        <TextView
            android:id="@+id/cinema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/cinema"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_centerInParent="true" />

        <ImageView
            android:id="@+id/cinema_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_search_white"
            android:paddingRight="10dp" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/cinema_radio"
        android:layout_below="@id/cinema_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_margin="5dp" >

        <RadioButton
            android:id="@+id/cinema_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cinema_title_radio_all"
            android:button="@null"
            android:textColor="@color/color_text_re" 
            android:text="@string/all"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:checked="true" />

        <RadioButton
            android:id="@+id/cinema_select_seat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cinema_title_radio_seat"
            android:textColor="@color/color_text_re" 
            android:text="@string/select_seat"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:button="@null" />
        <RadioButton
            android:id="@+id/cinema_group_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/cinema_title_radio_tuan"
            android:textColor="@color/color_text_re" 
            android:text="@string/group_purchase"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:button="@null" />
    </RadioGroup>
    
    <View 
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#d8d8d8"
        android:layout_below="@id/cinema_radio"/>
    	

    <ListView
        android:id="@+id/listview_cinema"
        android:layout_below="@id/cinema_radio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/divider_color"
        android:dividerHeight="1dip" >
    </ListView>

</RelativeLayout>