<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- header -->

    <include
        android:id="@+id/mine_cinema_ticket_title"
        android:layout_alignParentTop="true"
        layout="@layout/my_cinema_ticket_title" />

    <RelativeLayout
        android:id="@+id/my_cinema_ticket_three_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mine_cinema_ticket_title"
        android:background="@android:color/white" >

        <TextView
            android:id="@+id/my_cinema_ticket_wait_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/ticket_wait_payment"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <View
            android:id="@+id/my_cinema_ticket_wait_payment_view"
            android:layout_width="42dp"
            android:layout_height="3dp"
            android:layout_below="@id/my_cinema_ticket_wait_payment"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:background="@color/main_color"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/my_cinema_ticket_not_spending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/my_cinema_ticket_wait_payment"
            android:text="@string/ticket_not_spending"
            android:textColor="@color/main_color"
            android:textSize="14sp" />

        <View
            android:id="@+id/my_cinema_ticket_not_spending_view"
            android:layout_width="42dp"
            android:layout_height="3dp"
            android:layout_below="@id/my_cinema_ticket_not_spending"
            android:layout_marginRight="10dp"
            android:layout_marginTop="12dp"
            android:layout_toLeftOf="@id/my_cinema_ticket_wait_payment_view"
            android:background="@color/main_color"
            android:visibility="visible" />

        <TextView
            android:id="@+id/my_cinema_ticket_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/my_cinema_ticket_wait_payment"
            android:text="@string/ticket_done"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <View
            android:id="@+id/my_cinema_ticket_done_view"
            android:layout_width="42dp"
            android:layout_height="3dp"
            android:layout_below="@id/my_cinema_ticket_done"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/my_cinema_ticket_wait_payment_view"
            android:background="@color/main_color"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mine_cinema_ticket_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/my_cinema_ticket_three_textview" >
    </RelativeLayout>

   

</RelativeLayout>